--- a/.gitignore
+++ b/.gitignore
@@ -1,63 +1,24 @@
-# IDEs, System & Windows
-.idea/
-.vscode/
-!.vscode/extensions.json
-*.iml
+# System & OS
 .DS_Store
 Thumbs.db
+ehthumbs.db
+._*
+
+# IDEs & Editors
+.vscode/
+!.vscode/extensions.json
+.idea/
+*.iml
+*.iws
+*.ipr
 *.sw?
-out/
-
-# Dependency directories
-node_modules/
-jspm_packages/
-
-# Build & Output (Vite & Java)
-dist/
-dist-ssr/
-target/
-bin/
-build/
-.cache/
-.parcel-cache/
-.next/
-out/
-.nuxt/
-.svelte-kit/
-**/.vitepress/dist/
-
-# Java / Spring Boot
-*.class
-*.jar
-*.war
-*.ear
-
-# Environment & Secrets
-.env
-.env.*
-*.local
-!.env.example
-
-# Logs, PIDs & Diagnostics
-*.log
-logs
-npm-debug.log*
-yarn-debug.log*
-pnpm-debug.log*
-report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
-pids
-*.pid
-*.seed
-*.pid.loc
-
-# TypeScript, Tools & Vite Fixes
-*.tsbuildinfo
-.eslintcache
-.stylelintcache
-.node_repl_history
-vite.config.js.timestamp-*
-vite.config.ts.timestamp-*
 
 # Docker
 .docker/
 docker-compose.override.yml
+
+# Temporary & Logs
+logs/
+*.log
+temp/
+playground-temp/
