feat: add Quest entity and database configuration

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,12 +1,11 @@
 spring.application.name=backend
 
 # Verbindung zur PostgreSQL-Datenbank in Docker
-spring.datasource.url=jdbc:postgresql://localhost:5432/monsterquest_db
-spring.datasource.username=admin
-spring.datasource.password=password123
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:${DB_PORT}/${DB_NAME}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 
 # JPA / Hibernate Einstellungen
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.open-in-view=false
