feat: implement quest management and environment configuration
- Backend: Added QuestController with GET, POST, PUT and DELETE
- Frontend: Implemented QuestList with fetch and toggle logic
- Config: Added .env.example and Dotenv integration for DB security
- Testing: Added Insomnia API request collection

Closes #10, closes #11

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,14 @@ ehthumbs.db
 *.ipr
 *.sw?
 
+# Environment & Secrets
+.env
+.env.*
+*.local
+env.local
+env.*.local
+!.env.example
+
 # Docker
 .docker/
 docker-compose.override.yml
