--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=backend
 
 # Verbindung zur PostgreSQL-Datenbank in Docker
-spring.datasource.url=jdbc:postgresql://localhost:${DB_PORT}/${DB_NAME}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASSWORD}
+# Syntax: ${UMGEBUNGSVARIABLE:FALLBACK_WERT}
+spring.datasource.url=jdbc:postgresql://localhost:${DB_PORT:5432}/${DB_NAME:monsterquest_db}
+spring.datasource.username=${DB_USER:postgres}
+spring.datasource.password=${DB_PASSWORD:geheim}
 
 # JPA / Hibernate Einstellungen
 spring.jpa.hibernate.ddl-auto=update
